Whitespace fixes and JS error

--- a/app/static/sass/index/_note.scss
+++ b/app/static/sass/index/_note.scss
@@ -12,4 +12,9 @@
             background: $green;
         }
     }
+
+    .social-entry .pre {
+        // Allow line wrapping
+        white-space: pre-wrap;
+    }
 }
